harness/test/errors/063_str_trim_hint.eu
# Mistake: using str.trim (Python/JavaScript style) — does not exist in eucalypt
text: "  hello  "
trimmed: text str.trim
